--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>NYSC FAQ Chatbot (beta)</title>
 </head>
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>Hello, I am your NYSC virtual assistant</h1>
+    <h2>I can help you with answers to Frequently Asked Questions (FAQ)/<h2>
+      <h2> For best results, ask short questions</h2>
   </main>
 </body>
 
