--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h2>I can help you with answers to Frequently Asked Questions (FAQ)/<h2>
       <h2> For best results, ask short questions</h2>
   </main>
+      <iframe src='https://webchat.botframework.com/embed/nyscfaqbot?s=kk5XUkNL3qA.8EOiCfXfo5ttPLIvUyeCIYbFpQErtjCPRsDkV2q7tCc'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
+
 </body>
 
 </html>
